[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "py_mono_build"
version = "0.0.1"
description = "A CLI designed to make it easier to work in a python mono repo"
license = "GPL-3.0-or-later"
authors = ["Peter Hoburg <peterHoburg@users.noreply.github.com>"]
maintainers = ["Peter Hoburg <peterHoburg@users.noreply.github.com>"]
readme = "README.md"
#homepage = ""
#repository = ""
#documentation = ""
keywords = ["build", "mono-repo", "cli"]
classifiers = [
    "Topic :: Software Development :: Build Tools",
]

packages = [
    { include = "py_mono_build", from = "src" }
]

[tool.poetry.scripts]
py_mono_build = "py_mono_build.main:cli"
pmb = "py_mono_build.main:cli"

[tool.poetry.dependencies]
python = "^3.7"

bandit = "^1"
black = "^22"
click = "^8"
flake8 = "^5"
isort = "^5"
Jinja2 = "^3"
mypy = "^0.971"
pydocstringformatter = "^0.7"
pydocstyle = {extras = ["toml"], version = "^6"}
pylint = "^2"


[tool.poetry.dev-dependencies]
pytest = "^7.1.3"

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 120
include_trailing_comma = "True"
force_grid_wrap = 0
use_parentheses = "True"
combine_as_imports = "True"
force_alphabetical_sort_within_sections = "True"
ensure_newline_before_comments = "True"
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
lines_after_imports = 2
