[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "py_mono_tools"
version = "0.0.19"
description = "A CLI designed to make it easier to work in a python mono repo"
license = "GPL-3.0-or-later"
authors = ["Peter Hoburg <peterHoburg@users.noreply.github.com>"]
maintainers = ["Peter Hoburg <peterHoburg@users.noreply.github.com>"]
readme = "README.md"
homepage = "https://peterhoburg.github.io/py_mono_tools/"
repository = "https://github.com/peterHoburg/py_mono_tools"
documentation = "https://peterhoburg.github.io/py_mono_tools/"
keywords = ["build", "mono-repo", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Topic :: Software Development :: Build Tools",
]

packages = [
    { include = "py_mono_tools", from = "src" }
]

[tool.poetry.scripts]
py_mono_tools = "py_mono_tools.main:cli"
pmt = "py_mono_tools.main:cli"

[tool.poetry.dependencies]
python = "^3.8"

click = "^8"

bandit = "^1.7.4"
black = "^22.8.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
mypy = "^0.971"
pydocstringformatter = "^0.7.2"
pydocstyle = {extras = ["toml"], version = "^6.1.1"}
pylint = "^2.15.2"
pytest = "^7.1.3"


[tool.poetry.group.dev.dependencies]
pydevd-pycharm = "^222.4167.4"

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^8.4.2"
mkdocs-minify-plugin = "^0.5.0"
mkdocs-click = "^0.8.0"

[tool.poetry.extras]
linters-python = ["bandit", "black", "flake8", "isort", "mypy","pydocstringformatter", "pydocstyle[toml]", "pylint"]



[tool.poetry.group.testers_python.dependencies]
pytest = "^7.1.3"

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 120
include_trailing_comma = "True"
force_grid_wrap = 0
use_parentheses = "True"
combine_as_imports = "True"
force_alphabetical_sort_within_sections = "True"
ensure_newline_before_comments = "True"
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
lines_after_imports = 2
