[tool.poetry]
name = "docker-module"
version = "0.1.0"
description = ""
authors = ["Peter <peterHoburg@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "docker_module", from="src"}]

[tool.poetry.dependencies]
python = "^3.8"
py-mono-tools = {path = "../../../py_mono_tools", develop = true, extras = ["python-linters"]}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
