[tool.poetry]
name = "docker-module"
version = "0.1.0"
description = ""
authors = ["Peter <peterHoburg@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "docker_module", from="src"}]

[tool.poetry.dependencies]
python = "^3.8"
py-mono-tools = {path = "offline_mirror/py_mono_tools-999.0.0.tar.gz", extras = ["python"]}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
